[package]
name = "rdbc-oracle"
version = "0.1.0"
authors = ["王飘扬 <wangpy@seadun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdbc = { path = "../rdbc", version = "0.1.6" }

oracle = { version = "0.3.0", features = ["chrono"] }
sqlparser = "0.5.0"
chrono = "*"